--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.0.0",
-    "stripe": "^8.81.0"
+    "stripe": "^8.81.0",
+    "express": "^4.17.1"
   }
 }
