--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "stripe": "^8.81.0"
+    "stripe": "^8.81.0",
+    "request": "2.88.1"
   },
   "description": "Use Stripe Checkout with Netlify Functions to sell your products online.",
   "devDependencies": {},
