--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.0.0",
     "stripe": "^8.81.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.88.1"
   }
 }
