--- a/functions/package.json
+++ b/functions/package.json
@@ -8,6 +8,7 @@
     "@sendgrid/mail": "^7.0.0",
     "stripe": "^8.81.0",
     "express": "^4.17.1",
-    "request": "^2.88.1"
+    "faunadb": "^0.2.2",
+    
   }
 }
